--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,27 +1,49 @@
-name: Build and Push on Master  
+name: Docker CI/CD
 
 on:
   push:
-    branches:
-      - master
+    branches: [ master ]
+  workflow_dispatch:
+    inputs:
+      image_tag:
+        description: 'Custom tag for image'
+        required: true
+        default: 'manual-latest'
+
+env:
+  IMAGE_NAME: myapp
 
 jobs:
-  build-and-push:
+  build_and_push:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
+    - name: Checkout source
       uses: actions/checkout@v4
 
-    - name: Log in to Docker registry
-      run: echo "${{ secrets.REGISTRY_PASSWORD }}" | docker login ${{ secrets.REGISTRY_URL }} -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
+    - name: Set image tag
+      run: |
+        if [ "${{ github.event_name }}" = "push" ]; then
+          echo "TAG=${GITHUB_SHA}" >> $GITHUB_ENV
+        else
+          echo "TAG=${{ github.event.inputs.image_tag }}" >> $GITHUB_ENV
+        fi
 
     - name: Build Docker image
-      run: |
-        IMAGE_TAG=$(echo $GITHUB_SHA | cut -c1-7)
-        docker build -t ${{ secrets.REGISTRY_URL }}/myapp:$IMAGE_TAG .
+      run: docker build -t ${{ secrets.REGISTRY_URL }}/$IMAGE_NAME:$TAG .
 
-    - name: Push image
-      run: |
-        IMAGE_TAG=$(echo $GITHUB_SHA | cut -c1-7)
-        docker push ${{ secrets.REGISTRY_URL }}/myapp:$IMAGE_TAG
+    - name: Scan image with Trivy
+      uses: aquasecurity/trivy-action@master
+      with:
+        image-ref: ${{ secrets.REGISTRY_URL }}/$IMAGE_NAME:$TAG
+        format: 'table'
+        output: 'trivy-report.txt'
+
+    - name: Upload scan report
+      uses: actions/upload-artifact@v4
+      with:
+        name: trivy-scan-${{ github.run_id }}
+        path: trivy-report.txt
+
+    - name: Push Docker image
+      run: docker push ${{ secrets.REGISTRY_URL }}/$IMAGE_NAME:$TAG
