--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,22 +30,15 @@ jobs:
         fi
 
     - name: Build Docker image
-      run: docker build -t ${{ secrets.REGISTRY_URL }}/$IMAGE_NAME:$TAG .
+      run: docker build -t ${{ secrets.REGISTRY_URL }}/${{ env.IMAGE_NAME }}:${{ env.TAG }} .
 
     - name: Scan image with Trivy
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: ${{ secrets.REGISTRY_URL }}/$IMAGE_NAME:$TAG
+        image-ref: ${{ secrets.REGISTRY_URL }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
         format: 'table'
         output: 'trivy-report.txt'
 
-    - name: Scan image with Trivy
-      run: trivy image ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
-      env:
-        REGISTRY: ${{ secrets.REGISTRY_URL }}
-        IMAGE_NAME: myapp
-        TAG: ${{ github.sha }}
-
-
     - name: Push Docker image
-      run: docker push ${{ secrets.REGISTRY_URL }}/$IMAGE_NAME:$TAG
+      run: docker push ${{ secrets.REGISTRY_URL }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
+
