--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
     inputs:
       image_tag:
-        description: 'Custom tag for image'
+        description: 'Custom tag for manual image build'
         required: true
         default: 'manual-latest'
 
@@ -14,31 +14,65 @@ env:
   IMAGE_NAME: myapp
 
 jobs:
-  build_and_push:
+  auto_build_and_push:
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout source
+    - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Set image tag
-      run: |
-        if [ "${{ github.event_name }}" = "push" ]; then
-          echo "TAG=${GITHUB_SHA}" >> $GITHUB_ENV
-        else
-          echo "TAG=${{ github.event.inputs.image_tag }}" >> $GITHUB_ENV
-        fi
+    - name: Set commit tag
+      run: echo "TAG=${GITHUB_SHA}" >> $GITHUB_ENV
 
     - name: Build Docker image
-      run: docker build -t ${{ secrets.REGISTRY_URL }}/${{ env.IMAGE_NAME }}:${{ env.TAG }} .
+      run: docker build -t ${{ secrets.REGISTRY_URL }}/$IMAGE_NAME:$TAG .
 
-    - name: Scan image with Trivy
+    - name: Run Trivy scan
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: ${{ secrets.REGISTRY_URL }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
+        image-ref: ${{ secrets.REGISTRY_URL }}/$IMAGE_NAME:$TAG
         format: 'table'
         output: 'trivy-report.txt'
 
+    - name: Upload Trivy report
+      uses: actions/upload-artifact@v4
+      with:
+        name: trivy-report
+        path: trivy-report.txt
+
     - name: Push Docker image
-      run: docker push ${{ secrets.REGISTRY_URL }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
+      run: docker push ${{ secrets.REGISTRY_URL }}/$IMAGE_NAME:$TAG
+
+
+  manual_build_and_push:
+    if: github.event_name == 'workflow_dispatch'
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set manual tag
+      run: echo "TAG=${{ github.event.inputs.image_tag }}" >> $GITHUB_ENV
+
+    - name: Build Docker image
+      run: docker build -t ${{ secrets.REGISTRY_URL }}/$IMAGE_NAME:$TAG .
+
+    - name: Run Trivy scan
+      uses: aquasecurity/trivy-action@master
+      with:
+        image-ref: ${{ secrets.REGISTRY_URL }}/$IMAGE_NAME:$TAG
+        format: 'table'
+        output: 'trivy-report.txt'
+
+    - name: Upload Trivy report
+      uses: actions/upload-artifact@v4
+      with:
+        name: trivy-report
+        path: trivy-report.txt
+
+    - name: Push Docker image
+      run: docker push ${{ secrets.REGISTRY_URL }}/$IMAGE_NAME:$TAG
+
 
