--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,49 +1,47 @@
-name: CI/CD Docker
+name: Docker CI/CD
 
 on:
   push:
-    branches:
-      - master
+    branches: [ master ]
+  workflow_dispatch:
+    inputs:
+      image_tag:
+        description: 'Custom tag for image'
+        required: true
+        default: 'manual-latest'
 
 env:
-  IMAGE_NAME: myapp341 # Замінити на ім’я твого образу
-  REGISTRY_URL: ${{ secrets.REGISTRY_URL }}  # Наприклад: localhost:5000 або ngrok-URL
+  IMAGE_NAME: myapp
 
 jobs:
-  build-and-push:
+  build_and_push:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
+    - name: Checkout source
       uses: actions/checkout@v4
 
-    - name: Set tag from commit SHA
-      run: echo "TAG=${GITHUB_SHA}" >> $GITHUB_ENV
-
-    - name: Log in to Docker Registry
-      run: echo "${{ secrets.REGISTRY_PASSWORD }}" | docker login ${{ env.REGISTRY_URL }} -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
+    - name: Set image tag
+      run: |
+        if [ "${{ github.event_name }}" = "push" ]; then
+          echo "TAG=${GITHUB_SHA}" >> $GITHUB_ENV
+        else
+          echo "TAG=${{ github.event.inputs.image_tag }}" >> $GITHUB_ENV
+        fi
 
     - name: Build Docker image
-      run: docker build -t ${{ env.REGISTRY_URL }}/${{ env.IMAGE_NAME }}:${{ env.TAG }} .
-
-    - name: Install Trivy
-      run: |
-        sudo apt-get update
-        sudo apt-get install wget -y
-        wget https://github.com/aquasecurity/trivy/releases/download/v0.63.0/trivy_0.63.0_Linux-64bit.deb
-        sudo dpkg -i trivy_0.63.0_Linux-64bit.deb
+      run: docker build -t ${{ secrets.REGISTRY_URL }}/${{ env.IMAGE_NAME }}:${{ env.TAG }} .
 
     - name: Scan image with Trivy
-      run: trivy image --format table -o trivy-report.txt ${{ env.REGISTRY_URL }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
-
-    - name: Upload Trivy scan report
-      uses: actions/upload-artifact@v4
+      uses: aquasecurity/trivy-action@master
       with:
-        name: trivy-report
-        path: trivy-report.txt
+        image-ref: ${{ secrets.REGISTRY_URL }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
+        format: 'table'
+        output: 'trivy-report.txt'
 
     - name: Push Docker image
-      run: docker push ${{ env.REGISTRY_URL }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
+      run: docker push ${{ secrets.REGISTRY_URL }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
+
 
 
 
