--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,7 +11,7 @@ on:
         default: 'manual-latest'
 
 env:
-  IMAGE_NAME: myapp34142оропрпрпрапоапоаоп
+  IMAGE_NAME: myapp34142565675674557474574574574
 
 jobs:
 
